# wire

./: Cargo.toml  TESTING.md
.github/workflows/: rust.yml
crates/wire/: Cargo.toml
crates/wire-macros/: Cargo.toml
crates/wire-macros/src/: lib.rs
crates/wire/src/: anthropic.rs  api.rs  config.rs  gemini.rs  lib.rs  network.rs  network_common.rs  openai.rs  types.rs
crates/wire/src/mock/: mod.rs  server.rs
crates/wire/tests/: anthropic_tests.rs  client_factory_tests.rs  gemini_tests.rs  message_builder_tests.rs  openai_tests.rs
crates/wire/tests/common/: mock_server.rs  mod.rs
src/: lib.rs  network.rs  tiktoken.rs  types.rs
